force-app/main/default/objects/synety__PrePopulation_Object__c/synety__PrePopulation_Object__c.object-meta.xml
<CustomObject>
    <label>CloudCall PrePopulation Object</label>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CloudCall PrePopulation Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>