force-app/main/default/objects/synety__PrePopulation_Object__c/fields/synety__Call_Record_Association_Fields__c.field-meta.xml
<CustomField>
    <fullName>synety__Call_Record_Association_Fields__c</fullName>
    <label>Call Record Association Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>