force-app/main/default/objects/synety__PrePopulation_Object__c/fields/synety__Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>synety__Filter_Logic__c</fullName>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>