force-app/main/default/objects/synety__PrePopulation_Object__c/fields/synety__Label_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>synety__Label_Field_Name__c</fullName>
    <label>Label Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>