force-app/main/default/objects/synety__PrePopulation_Object__c/fields/synety__Order__c.field-meta.xml
<CustomField>
    <fullName>synety__Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>