force-app/main/default/objects/synety__PrePopulation_Object__c/listViews/synety__All1.listView-meta.xml
<ListView>
    <fullName>synety__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>